Se agregoe l login externo validandolo con el userEmail

--- a/PMCTool.App/appsettings.json
+++ b/PMCTool.App/appsettings.json
@@ -11,7 +11,8 @@
     "PmMenuCodes": "003,003.01,003.02,003.03",
     "UrlPDFViews": "http://localhost:28386",
     "PlatformRun": "Windows", //Linux o Windows,  
-    "UrlPMCTool": "http://app.test.pmc-tool.com"
+    "UrlPMCTool": "http://app.test.pmc-tool.com",
+    "UrlAnalytics": "http://analytics.test.pmc-tool.com"
   },
   "AllowedHosts": "*"
 }
