Se agrega variable AppSate en appsettings

--- a/PMCTool.App/appsettings.json
+++ b/PMCTool.App/appsettings.json
@@ -11,6 +11,7 @@
     "PmMenuCodes": "003,003.01,003.02,003.03",
     "UrlPDFViews": "http://localhost:28386",
     "PlatformRun": "Windows", //Linux o Windows,  
+    "AppState": "Development", // Google Analytics  Production, Development, Test,  
     "UrlPMCTool": "http://app.test.pmc-tool.com",
     "UrlAnalytics": "http://analytics.test.pmc-tool.com"
   },
