--- a/PMCTool.App/PMCTool.App.csproj
+++ b/PMCTool.App/PMCTool.App.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="ClosedXML" Version="0.94.2" />
     <PackageReference Include="CookieManager" Version="2.0.0" />
     <PackageReference Include="DHTMLX.Gantt" Version="6.2.0" />
+    <PackageReference Include="EPPlusFree" Version="4.5.3.8" />
     <PackageReference Include="Haukcode.DinkToPdf" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
