sincro repo analitycs

--- a/PMCTool.App/PMCTool.App.csproj
+++ b/PMCTool.App/PMCTool.App.csproj
@@ -49,6 +49,10 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="Views\GlobalStatus\Index_respaldp.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Update="wwwroot\js\plugins\sweetalert2.min.js">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
