URL PMCTOOL EVIDENCE

--- a/PMCTool.App/appsettings.Development.json
+++ b/PMCTool.App/appsettings.Development.json
@@ -11,7 +11,7 @@
     "ImageLogicalPath": "http://localhost:28386/images",
     "FileStorage": "D:\\NODO4000\\Inoventi\\FileStorage",
     "PmMenuCodes": "003,003.01,003.02,003.03",
-    "UrlAnalytics": "http://analytics.test.pmc-tool.com",
-    "UrlPMCTool": "http://app.test.pmc-tool.com"
+    "UrlAnalytics": "https://analytics.pmc-tool.mx",
+    "UrlPMCTool": "http://app.pmc-tool.mx"
   }
 }
