--- a/PMCTool.App/appsettings.json
+++ b/PMCTool.App/appsettings.json
@@ -12,8 +12,8 @@
     "UrlPDFViews": "http://localhost:28386",
     "PlatformRun": "Windows", //Linux o Windows,  
     "AppState": "Development", // Google Analytics  Production, Development, Test,  
-    "UrlPMCTool": "http://app.test.pmc-tool.com",
-    "UrlAnalytics": "http://analytics.test.pmc-tool.com"
+    "UrlPMCTool": "http://app.pmc-tool.mx",
+    "UrlAnalytics": "https://analytics.pmc-tool.mx"
   },
   "AllowedHosts": "*"
 }
